# baseball-frame-analysis

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  dev.db  docker-compose.yml  events.db  pyproject.toml  run.ps1
.github/workflows/: ci.yml
config/: capture.yaml  model.yaml  storage.yaml
configs/: app_config.yaml  database.yaml  logging.yaml  mediapipe.yaml  paths.yaml  training.yaml  yolo.yaml
docker/: Dockerfile.opencv-ffmpeg  Dockerfile.postgres  Dockerfile.training  Dockerfile.yolo  README.md  docker-compose.yml  ingest_entrypoint.sh  training_entrypoint.sh  yolo_entrypoint.sh
docs/: api_spec.md  architecture.md  modeling_notes.md
migrations/: env.py  env.py.bak
migrations/versions/: 447c08bc3fb9_sync_models.py  7a6df1e9fdfe_init.py
notebooks/: exploration.ipynb  training_experiments.ipynb
scripts/: migrate_db.sh  reprocess_video.py  start_capture.sh
src/: __init__.py  __main__.py  main.py
src/analysis/: inference.py  postprocess.py  tracker.py
src/annotation/: event_logger.py  overlay.py  zone_mapper.py
src/api/: dependencies.py  main.py  routes.py
src/capture/: frame_sampler.py  recorder.py  stream_listener.py
src/cli/: calibrate_frames.py  run_pipeline.py  validate_dataset.py
src/common/: decorators.py  io.py  utils.py
src/data/: README.md  __init__.py
src/db/: __init__.py  crud.py  database.py  models.py
src/detection/: postprocess.py  tracker.py  yolo_detector.py
src/ingest/: capture_service.py  preprocess.py
src/integration/: aggregator.py  exporter.py  schema.py
tests/: test_analysis.py  test_capture.py
(+38 files in other folders)
