[tool.poetry]
name = "baseball-frame-analysis"
version = "0.2.0"
description = "Real‑time baseball frame capture & analysis"
authors = ["ChatGPT <chatgpt@example.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras=["standard"], version="^0.29.0"}
opencv-python-headless = "^4.9.0"
numpy = "^1.26"
sqlalchemy = "^2.0"
loguru = "^0.7"
pydantic = "^2.7"
python-multipart = "^0.0.9"
aiofiles = "^23.2"
apscheduler = "^3.10"
alembic = "^1.13"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
ruff = "^0.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
